--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -24,17 +24,32 @@ legend { font-weight:bold; margin:4px; }
 label { font-weight:bold; }
 input { border-radius:4px; border:1px initial; }
 input:required { background-color:#E7E49D; }
+textarea { width:50ex; height:5em; }
 
-/**
- * Base styles for buttons and button links
- */
-button, .button {
-	border:1px solid black; border-radius:6px;
-	display:inline-block;
-	padding:0 10px;
-	font-weight:bold; color:black;
-	background: linear-gradient(to bottom, #f5f6f6 0%,#dbdce2 21%,#b8bac6 49%,#dddfe3 80%,#f5f6f6 100%);
+button, .btn {
+    font-size:12px; color:black;
+    font-weight:normal;
+    display:inline-block;
+    padding:4px;
+    margin-right:.5ex;
+    border:1px solid #ccc;
+    background-image:url('images/buttonBackground.png');
+    background-position:left center repeat-x;
 }
+.hidden-label { font-size:0; height:1px; overflow:hidden; }
+.fa-times       { color:red;   }
+.fa-pencil      { color:blue;  }
+.fa-plus        { color:green; }
+.fa-check       { color:green; }
+.fa-floppy-o    { color:green; }
+.fa-map-marker  { color:blue;  }
+.fa-globe       { color:blue;  }
+.fa-list-ul     { color:blue;  }
+.fa-print       { color:blue;  }
+.fa-reorder     {}
+.fa-user        {}
+.fa-search      {}
+.fa-upload      {}
 
 /**
  * Banner
