--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -1,7 +1,7 @@
 .panelList {
     overflow: auto;
     position: absolute;
-        top: 3rem;
+        top: 230px;
         bottom: 0;
         left: 0;
     width: 20rem;
@@ -25,7 +25,7 @@
         font-size: (12rem/16);
         padding: 0 2.5rem .5rem 0;
     }
-    
+
     &:after {
         background: url('images/forward-arrow.svg') no-repeat 0 0 / 100% 100%;
         content: ' ';
