Reference implementation of new drop-down menu for listing of road closures.

--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -12,4 +12,4 @@
 @import 'sass-modules/_tables';
 @import 'sass-modules/_panels';
 @import 'sass-modules/_panelList';
-
+@import 'sass-modules/_selector.scss';
