--- a/public/css/sass-modules/_vars-mixins.scss
+++ b/public/css/sass-modules/_vars-mixins.scss
@@ -7,35 +7,6 @@ $url-header-background: "images/header-background.jpg";
 $font-family-default: "PT Sans", "Helvetica Neue", Arial, sans-serif;
 $font-family-heading: Lato, "Helvetica Neue", Arial, sans-serif;
 
-$color-text-default: #303030;
-$color-content-background: #fff;
-
-$color-link:   #1e59ae;
-$color-nav1:   #1e59ae;
-$color-header: #1e59ae;
-$color-accent: #1e59ae;
-
-$color-heading-1: #777;
-$color-heading-2: #555;
-$color-heading-3: #666;
-
-
-$color-background-field:           #f4f4f4;
-$color-background-field-highlight: #fafafa;
-$color-border-input:           #e0e0e0;
-$color-border-input-highlight: #a0a0a0;
-$color-border-modal:           #f3f3f3;
-$color-border-table:           #c0c0c0;
-
-$color-table-background:        #edf0f5;
-$color-table-header-background: #204984;
-
-$color-shadow: rgba(0, 0, 0, 0.5);
-
-$size-font-default: 100%;
-
-$font-weight-heading: 600;
-
 // Colors
 // Btown Blue
 $cob-blue: #315da6;
@@ -53,10 +24,42 @@ $cob-green-light: #70bf88;
 $cob-green-lightest: #aaffac;
 
 // Blue-ish gray
+$cob-gray-light: #d7e5f4;
 $cob-gray: #bcc9d8;
 $cob-gray-dark: #8d98a5;
 $cob-gray-darkest: #585f68;
 $cob-nightshade: #2a2e32; // Darker than darkest
+
+
+$color-text-default: $cob-gray-darkest;
+$color-content-background: #fff;
+
+$color-link:   #1e59ae;
+$color-nav1:   #1e59ae;
+$color-header: #1e59ae;
+$color-accent: #1e59ae;
+
+$color-heading-1: #777;
+$color-heading-2: #555;
+$color-heading-3: #666;
+
+
+$color-background-field:           $cob-gray-light;
+$color-background-field-highlight: #fafafa;
+$color-border-input:           $cob-gray-dark;
+$color-border-input-highlight: #a0a0a0;
+$color-border-modal:           #f3f3f3;
+$color-border-table:           #c0c0c0;
+
+$color-table-background:        #edf0f5;
+$color-table-header-background: #204984;
+
+$color-shadow: rgba(0, 0, 0, 0.5);
+
+$size-font-default: 100%;
+
+$font-weight-heading: 600;
+
 
 // Font families
 $font-body-copy: 'PT Sans', Verdana, sans-serif;
