--- a/public/css/sass-modules/_field.scss
+++ b/public/css/sass-modules/_field.scss
@@ -64,6 +64,7 @@ form dl {
     }
 }
 
+.windowPanel > .editPanel > form > fieldset, 
 .windowPanel > .searchPanel > form > fieldset {
     border: none;
     margin: 0;
@@ -88,7 +89,7 @@ form dl {
 
             > dd {
                 > input {
-                    width: 10em;
+                    width: inherit;
                 }
             }
         }
