Quick first pass at styling edit form. Will iterate after I check for updates with Cliff.

--- a/public/css/sass-modules/_field.scss
+++ b/public/css/sass-modules/_field.scss
@@ -82,6 +82,10 @@ form dl {
         }
         > dd {
             margin-left: 0;
+
+            > textarea {
+                width: 17rem;
+            }
         }
         
         &.dateRange {
