--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -27,7 +27,7 @@
         margin: 0;
 
         &Tools {
-            border-left: 1px solid #fff;
+            border-left: 1px solid $cob-blue-light;
             height: 1.5rem;
             padding: 0 .25rem 0 .25rem;
             position: absolute;
