--- a/public/css/sass-modules/_layout.scss
+++ b/public/css/sass-modules/_layout.scss
@@ -2,17 +2,17 @@
 .full-width #content-panel { }
 
 .container.two-column {
+    /*
     padding: 0;
     position: relative;
-
     #panel-one {
         box-sizing: border-box;
         float: left;
         min-height: 40rem;
         overflow: auto;
-        padding: 0 1rem 0 1rem;
         width: 33.3333%;
     }
+*/
     #content-panel {
         box-sizing: border-box;
         margin-left: 33.3333%;;
