--- a/public/css/sass-modules/_selector.scss
+++ b/public/css/sass-modules/_selector.scss
@@ -1,6 +1,7 @@
 .nav-dropdown {
     display: inline-block;
     position: relative;
+    margin-bottom: 0;
 
     > dt {
         display: inline-block;
