Proposed layout for error messages.

--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -185,3 +185,11 @@
         white-space: pre-wrap;
     }
 }
+
+.errorPanel {
+    margin-left: -25rem;
+    position: absolute;
+        top: 5rem;
+        left: 50%;
+    width: 50rem;
+}
