Round of polish on map-related tools.

--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -13,4 +13,5 @@
 @import 'sass-modules/_tables';
 @import 'sass-modules/_panels';
 @import 'sass-modules/_panelList';
+@import 'sass-modules/_openLayers';
 @import 'sass-modules/_selector.scss';
