--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -14,14 +14,23 @@
 }
 .mapTools {
     position: absolute;
-        top: 10rem;
-        left: 20.75rem;
+        top: 5rem;
+        left: 24rem;
         z-index: 2;
+    vertical-align: top;
 
+    > select, option {
+        font-family: $font-family-default !important;
+    }
     > button {
-        display: block;
+        background: #fff;
+        border-color: $cob-gray;
+        line-height: .9rem; // <- Should bump height of button down to 25px
         margin: 0 0 .5rem 0;
         width: 5rem;
+        &, select {
+            vertical-align: top;
+        }
     }
 }
 
