--- a/public/css/sass-modules/_vars-mixins.scss
+++ b/public/css/sass-modules/_vars-mixins.scss
@@ -56,6 +56,11 @@ $color-table-header-background: #204984;
 
 $color-shadow: rgba(0, 0, 0, 0.5);
 
+$color-button-background: #fff;
+$color-button-background-current: $cob-blue;
+$color-button-text: $cob-gray-darkest;
+$color-button-text-active: #fff;
+
 $size-font-default: 100%;
 
 $font-weight-heading: 600;
