Make the pop-up bubble look more like a typical popover.

--- a/public/css/sass-modules/_openLayers.scss
+++ b/public/css/sass-modules/_openLayers.scss
@@ -1,6 +1,7 @@
 // Overrides for OpenLayers
 
 .mapPanel {
+    background-color: #f1eee8; // <- color sampled from a screenshot of OpenLayers
     .ol-control {
         background: none;
 
