--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -12,19 +12,22 @@
     padding: .5rem .5rem 0 .5rem;
     position: relative;
 
-    &-title {
+    .title {
         display: block;
         font-family: $font-family-default;
         font-size: (14rem/16);
         margin: 0 2.5rem .25rem 0;
     }
-    &-dates {
+    .dates {
         border-bottom: 1px solid $cob-gray;
         color: $cob-gray-dark;
         display: block;
         font-size: (12rem/16);
         padding: 0 2.5rem .5rem 0;
     }
+    .type        { display:none; }
+    .description { display:none; }
+    .geography   { display:none; }
 
     &:after {
         background: url('images/forward-arrow.svg') no-repeat 0 0 / 100% 100%;
